# aip

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  shorts.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  protocol-rfc.md
conformance/: run_conformance.py
examples/adapter-python/: adapter.py
examples/minimal-python/: example.py  server.py
examples/minimal-typescript/: example.ts
sdk-go/: README.md  aip.go  client.go  go.mod
sdk-java/: README.md  pom.xml
sdk-java/src/main/java/dev/aip/client/: AIPClient.java  SSEEvent.java
sdk-java/src/main/java/dev/aip/model/: AIPAck.java  AIPErrorCode.java  AIPMessage.java  AIPTask.java  AgentAssignment.java  AgentStatus.java  AgentUsageBreakdown.java  Artifact.java  AuthenticationInfo.java  GroupStatus.java  LLMUsage.java  ModelUsageBreakdown.java  Presentation.java  RateLimitInfo.java  RecursiveStatusNode.java  Skill.java  StatusEndpoints.java  TaskState.java  TraceEvent.java  UsageSummary.java  WorkSnapshot.java
sdk-js/: README.md  package.json  tsconfig.json
sdk-js/src/: client.ts  helpers.test.ts  helpers.ts  index.ts  types.ts
sdk-python/: README.md  pyproject.toml
sdk-python/src/aip/: __init__.py  bridge.py  cli.py  client.py  discovery.py  gateway.py  jsonrpc_bridge.py  message.py  observability.py  security.py  send.py  status.py
sdk-python/src/aip/transport/: __init__.py  base.py  http.py
sdk-python/tests/: test_message.py  test_resilience.py  test_security.py  test_send.py  test_status.py
spec/: README.md  openapi.yaml  specification.md
spec/schemas/: ack.schema.json  message.schema.json  status.schema.json  trace.schema.json
spec/versions/: 1.0.0.md  1.1.0.md  1.1.1.md  1.2.0.md  1.2.1.md  1.3.0.md  1.4.0.md  1.5.0.md  1.6.0.md  1.6.2.md
