[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aip-protocol"
version = "1.3.0"
description = "Agent Interaction Protocol — open standard for agent-to-agent communication."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AIP Protocol Contributors" },
]
keywords = ["ai", "agent", "protocol", "multi-agent", "communication", "aip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
]

[project.scripts]
aip = "aip.cli:main"

[project.optional-dependencies]
bridge = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
]
ws = [
    "websockets>=12.0",
]
all = [
    "aip-protocol[bridge,ws]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/aip-protocol/aip"
Documentation = "https://github.com/aip-protocol/aip/tree/main/spec"
Repository = "https://github.com/aip-protocol/aip"
Issues = "https://github.com/aip-protocol/aip/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aip*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
